# LaravelGate

./: CMakeLists.txt  README.md
cmake/: Utils.cmake
src/: .gitignore  CMakeLists.txt  LaravelGateConfig.cmake.in
src/lib/: CMakeLists.txt  config.h  config.h.in  datacontroller.cpp  datacontroller.h  debug.cpp  debug_p.h  global.h  laravelgate.h  laravelrestcontroller.cpp  laravelrestcontroller.h  logincontroller.cpp  logincontroller.h  logincontroller_p.h
tests/: CMakeLists.txt  main.cpp
translations/: laravelgate_en.ts  laravelgate_fr.ts
